# cpp-template01

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yaml
cmake/: ProjectConfigs.cmake  ProjectInstall.cmake  ProjectOptions.cmake  ProjectPackaging.cmake
cmake/modules/: BuildLocation.cmake  BuildOptions.cmake
config/generators/: debFormat.cmake
config/misc/: cpackGeneratorOverrides.cmake
config/options/: CMakeLists.txt  Options.hpp.in
doc/: CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml.in
doc/pages/: Page1.md  Page2.md
src/: CMakeLists.txt
test/: CMakeLists.txt  setTestsOptions.cmake
